added tall class

--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
            </div>
            <div class="parent3">
            <div class="largebox" id="horizontal">box4</div>
-           <div class="largebox" id="vertical">box5</div>
+           <div class="tallbox" id="vertical">box5</div>
            </div>
 
        </div>
