--- a/pagina3.html
+++ b/pagina3.html
@@ -44,17 +44,15 @@
         .selected:hover{
             color:red;
         }
-        li a {
-        display: inline-block;
-            width:inherit;
-            height:inherit;
+         li a {
+        display:block;
         }
     </style>
     <body>
         <ul>
-            <li class="selected"><a href="index.html">pagina 1</a></li>
+            <li><a href="index.html">pagina 1</a></li>
             <li><a href="pagina2.html">pagina 2</a></li>
-            <li><a href="pagina3.html">pagina 3</a></li>
+            <li class="selected"><a href="pagina3.html">pagina 3</a></li>
         </ul>
         <ol>
             <li>pagina 1</li>
