--- a/butoane-cu-pret.html
+++ b/butoane-cu-pret.html
@@ -108,8 +108,8 @@
 
   <body>
     <div class="headButton">
-      <button class="regularButton">Usuall Price</button>
-      <button class="selectedButton">Today Only Offer!</button>
+      <div class="regularButton">Usuall Price</div>
+      <div class="selectedButton">Today Only Offer!</div>
     </div>
     <div class="container">
       <div class="bigbox">
