--- a/Curs4/lucrare-practica-bulina.html
+++ b/Curs4/lucrare-practica-bulina.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>Title of the document</title>
-</head>
-<style>
+  </head>
+  <style>
     .circle {
         border-radius: 50%;
         background: red;
@@ -17,48 +16,40 @@
     .circle:before{
         display: inline-block;
         content: "";
+        border-radius: 50%;
         width: 0;
         height: 0;
         position: absolute;
-        border-top: 10px transparent solid;
-        border-right: 10px transparent solid;
-        border-bottom: 10px green solid;
-        border-left: 10px transparent solid;
-        /* left: 50%;
+        left: 50%;
         top: 50%;
         opacity:1;
         transform: translate(-50%, -50%);
-        transition: width .5s, height .5s, opacity .5s; */
+        transition: width .5s, height .5s, opacity .5s;
     }
 
     .circle:after{
         display: inline-block;
         content: "";
-        background: green;
-        width: 20px;
-        height: 20px;
+        border-radius: 50%;
+        background: white;
+        width: 10px;
+        height: 10px;
         position: absolute;
-        border-top: 10px green solid;
-        border-right: 10px transparent solid;
-        border-bottom: 10px transparent solid;
-        border-left: 10px transparent solid;
-        /* left: 50%;
+        left: 50%;
         top: 50%;
         opacity:1;
         transform: translate(-50%, -50%);
         transition: width .5s, height .5s, opacity .5s; */
     }
-    /* .circle:hover:after {
+     .circle:hover:after {
         display: inline-block;
         width: 25px;
         height: 25px;
         opacity: 1;
     } */
-</style>
+  </style>
 
-<body>
+  <body>
     <div class="circle"></div>
-
-</body>
-
+  </body>
 </html>
