--- a/Curs4/fade.html
+++ b/Curs4/fade.html
@@ -17,12 +17,6 @@
       width: 450px;
       align-self: center;
     }
-    .image {
-      flex-grow: 2;
-      padding-bottom: 30px;
-      align-self: center;
-      opacity: 1;
-    }
     .text2 {
       flex-grow: 1;
       width: 450px;
@@ -34,21 +28,25 @@
       color: white;
       padding: 2px;
     }
+    .image {
+      flex-grow: 2;
+      padding-bottom: 30px;
+      align-self: center;
+    }
+    .over {
+      opacity: 0;
+      transition: 0.5s;
+      background: blue;
+    }
+    .image:hover .over {
+      opacity: 1;
+    }
+
     .mesaj {
       flex-grow: 2;
-      content: "Hello World!";
       padding-bottom: 30px;
       align-self: center;
-      background: blue;
       color: white;
-    }
-    .image:hover .mesaj {
-      flex-grow: 2;
-      padding-bottom: 30px;
-      align-self: center;
-      background: blue;
-      color: white;
-      opacity: 0;
     }
   </style>
   <body>
@@ -57,13 +55,18 @@
         <h3>Example</h3>
         <br />Fade in text:
       </div>
-      <div class="image">
-        <img src="images/img_avatar3.png" height="450px" width="450px" />
+      <div class="container2">
+        <img
+          class="image"
+          src="images/img_avatar3.png"
+          height="450px"
+          width="450px"
+        />
+        <div class="over"><div class="mesaj">Hello World!</div></div>
       </div>
       <div class="text2">
         <div class="buton">Try it Yourself</div>
       </div>
-      <div class="mesaj">Hello World!</div>
     </div>
   </body>
 </html>
