--- a/Curs6/responsive-design1.html
+++ b/Curs6/responsive-design1.html
@@ -32,7 +32,7 @@
         text-align: center;
         box-sizing: border-box;
         border: 3px solid white;
-        padding:1%;
+        padding: 1%;
         margin: 1%;
         height: 60%;
         border-top-left-radius: 10px;
@@ -53,7 +53,8 @@
         flex: 1;
         background: green;
     }
-    #singlePicture{
+
+    #singlePicture {
         height: 100%;
         width: 100%;
     }
@@ -62,6 +63,39 @@
         box-sizing: border-box;
         background: black;
         flex: 1.3;
+        font-size: 0;
+        margin: 0;
+        padding: 0;
+        height:100%;
+    }
+    .container2{
+        display: inline-block;
+        height:50%;
+        width:50%;
+    }
+    .morePictures{
+        box-sizing: border-box;
+        display:inline-block;
+        background: yellow;
+        width:30%;
+        float: right;
+        height:100%;
+        border: 1px solid black;
+    }
+    /* .moreinfo{
+        box-sizing: border-box;
+        display:inline-block;
+        background: red;
+        width:70%;
+        float: left;
+        height:100%;
+    } */
+    p{
+        width:70%;
+        height:100%;
+        display: inline-block;
+        color:white;
+        font-size: 14px;
     }
 </style>
 
@@ -74,8 +108,25 @@
             <div class="submeniu">Casa Milo</div>
         </div>
         <div class="mainPicture"><img src="main-image.jpg" id="singlePicture"></div>
-        <div class="morePictures"></div>
-        <div class="info"></div>
+        <div class="info">
+            <div class="container2">
+                <div class="morePictures"></div>
+                <p>xxxxxxxxxx</p>
+            </div>
+            <div class="container2">
+                <div class="morePictures"></div>
+                <p>xxxxxxxxxx</p>
+            </div>
+            <div class="container2">
+                <div class="morePictures"></div>
+                <p>xxxxxxxxxx</p>
+            </div>
+            <div class="container2">
+                <div class="morePictures"></div>
+                <p>xxxxxxxxxx</p>
+            </div>
+        </div>
+
     </div>
 </body>
 </htm>
