--- a/Curs6/Curs7/if-uri.html
+++ b/Curs6/Curs7/if-uri.html
@@ -1,36 +1,88 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Title of the document</title>
+    <title>If-uri</title>
 </head>
 <script>
-// var a =6;
-// if(a == 5){
-//     console.log("a este 5");
-// } else{
-//     console.log("a nu este 5");
-// }
+    // var a =6;
+    // if(a == 5){
+    //     console.log("a este 5");
+    // } else{
+    //     console.log("a nu este 5");
+    // }
 
-//nr. pare
-// var numar=2;
-// if(numar % 2 ==0){
-//     console.log("numar este par")
-// } else {
-//     console.lof("numar nu este par")
-// }
+    //nr. pare
+    // var numar=2;
+    // if(numar % 2 ==0){
+    //     console.log("numar este par")
+    // } else {
+    //     console.lof("numar nu este par")
+    // }
 
-//ultima cifra 
-var numar = Math.round(Math.random() *1000);
-console.log(numar);
-var ultimaCifra =  numar % 10;
-if(ultimaCifra % 2 ==0){
-    console.log("numar este par")
-} else {
-    console.lof("numar nu este par")
-}
+    //ultima cifra 
+    // var numar = Math.round(Math.random() *1000);
+    // console.log(numar);
+    // var ultimaCifra =  numar % 10;
+    // if(ultimaCifra % 2 ==0){
+    //     console.log("numar este par")
+    // } else {
+    //     console.log("numar nu este par")
+    // }
+
+    // var n = Math.round(Math.random() *1000);
+    // var n = -5;
+    // console.log(n);
+
+    // if (n >= 0){
+    //     if (n <= 500){
+    //         console.log("n apartine [0, 500]");
+    //     }else {
+    //         if (n <= 1000){
+    //             console.log( "n apartine [0, 500]");
+    //         } else{
+    //             console.log("n este mai mare ca 1000");
+    //         }
+    //     }
+    // } else {
+    //     console.log( "n este mai mic ca 0")
+    // }
+    console.warn("-----------------");
+    // var maxim;
+    // var n1 = Math.round(Math.random() * 1000);
+    // console.log(n1)
+    // var n2 = Math.round(Math.random() * 1000);
+    // console.log(n2)
+    // // var n1 = 5;
+    // // var n2 = 5;
+    // if (n1 > n2) {
+    //     console.log("maximul este n1");
+    //     maxim = n1;
+    // } else {
+    //     if (n2 > n1) {
+    //         console.log("maximul este n2")
+    //         maxim = n2
+    //     } else {
+    //         console.log("numerele sunt egale");
+    //     }
+    // }
+    console.warn("---------------------");
+    var m1 = 10;
+    var m2 = 15;
+    var m3 = 15;
+    var maxim;
+    maxim = m1;
+    if (maxim < m2) {
+        maxim = m2;
+    }
+    if (maxim < m3){
+        maxim = m3;
+    }
+    console.log("maximul este", maxim)
 
 
 </script>
+
 <body>
-The content of the document......
+    The content of the document......
 </body>
