--- a/Curs6/Curs7/if-uri.html
+++ b/Curs6/Curs7/if-uri.html
@@ -92,28 +92,38 @@ console.warn("-----------------")
 // console.log("numerele in ordine crescatoare sunt", a1, a2);
 
 
-var a1 = Math.round(Math.random() * 1000);
-var a2 = Math.round(Math.random() * 1000);
-var a3 = Math.round(Math.random() * 1000);
-var aux;
+// var a1 = Math.round(Math.random() * 1000);
+// var a2 = Math.round(Math.random() * 1000);
+// var a3 = Math.round(Math.random() * 1000);
+// var aux;
 
-if (a1 > a2){
-    aux = a1;
-    a1 = a2;
-    a2 = aux;
-}
-if (a1 > a3){
-    aux = a1;
-    a1 = a3;
-    a3 = aux;
-}
-if (a2 > a3){
-    aux = a2;
-    a2 = a3;
-    a3 = aux;
-}
+// if (a1 > a2){
+//     aux = a1;
+//     a1 = a2;
+//     a2 = aux;
+// }
+// if (a1 > a3){
+//     aux = a1;
+//     a1 = a3;
+//     a3 = aux;
+// }
+// if (a2 > a3){
+//     aux = a2;
+//     a2 = a3;
+//     a3 = aux;
+// }
 
-console.log("numerele in ordine cresc", a1, a2, a3);
+// console.log("numerele in ordine cresc", a1, a2, a3);
+
+var a = 523;
+var u = a % 10;
+console.log("nr unitati este", u);
+n = Math.fl
+var z = a % 100;
+console.log("nr zeci este", (z-u)/10 );
+var s = a % 1000;
+console.log(s);
+
 
 </script>
 
